yaml-files/java-tomcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-tomcat-deployment
  namespace: java-tomcat
  labels:
    app: java-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-app
        image: tomcat:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
