yaml-files/java-tomcat-ingress-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: java-tomcat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        #      - path: /testpath
        pathType: Prefix
        - backend:
            service:
              name: java-tomcat-service
              port:
                number: 80
