yaml-files/java-tomcat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 110m
spec:
  rules:
    - host: a81fa910663584b0495ba42342197821-9503528797ca8e57.elb.ap-south-1.amazonaws.com
      http:
        paths:
          - backend:
              serviceName: java-tomcat-service
              servicePort: 80
